main.tf
provider "aws"{
	region = var.aws_region
}

resource "aws_vpc" "main"{
	cidr_block = "172.31.0.0/16"
	instance_tenancy = "default"
	tags = {
		Name = "main"
}
}
#Create security group with firewall rules
resource "aws_security_group" "new_group" {
  name        = var.security_group
  description = "security group for jenkins"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 # outbound from Jenkins server
  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags= {
    Name = var.security_group
  }
}

resource "aws_instance" "myFirstInstance" {
  ami           = var.ami_id
  key_name = var.key_name
  instance_type = var.instance_type
  vpc_security_group_ids = [aws_security_group.new_group.id]
  tags= {
    Name = var.tag_name
  }
}
